--- a/index.html
+++ b/index.html
@@ -6,5 +6,25 @@
 <body>
 	<h1>SBOOK</h1>
 	<h4><i>welcome to SBOOK</i></h4>
-	
+	<a href="fb.html">go to my facebook</a>
+	<ol>
+		<li>first item</li>
+		<li>2nd item</li>
+		<li>final item</li>
+	</ol>
+
+	<ul>
+		<li>Name</li>
+		<li>place</li>
+		<li>animal</li>
+		<li>thing</li>
+	</ul>
+
+	<ol>
+
+		<li><a href="https://www.facebook.com">facebook</a></li>
+		<li><a href="https://www.google.com">google</a></li>
+		<li><a href="https://www.twitter.com">twitter</a></li>
+		<li><a href="https://www.microsoft.com">microsoft</a></li>
+	</ol>
 </body>
