--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" id="sbook" class="no_js">
+<html lang="en" id="SMbook" class="no_js">
 <head>
-	<title>SBOOK | WELCOME TO SBOOK</title>
+	<title>SMBOOK | WELCOME TO SMBOOK</title>
 </head>
-<body>
-	<h1>SBOOK</h1>
-	<h4><i>welcome to SBOOK</i></h4>
+<body style="background-color: #d5f2e3">
+	<h1>SMBOOK</h1>
+	<h4>
+		<i>
+			welcome to SMBOOK
+		</i>
+	</h4>
 	<a href="fb.html">go to my facebook</a>
 	<ol>
 		<li>first item</li>
@@ -27,4 +31,22 @@
 		<li><a href="https://www.twitter.com">twitter</a></li>
 		<li><a href="https://www.microsoft.com">microsoft</a></li>
 	</ol>
+
+	<div style="background-color: RED; height: 70px; width: 100px;">
+		<p style='color: #ffffff' >First paragraph Tag</p>
+	</div>
+	
+	<br>
+
+  	<div style ="background-color: #e5b264;height: 50px; width: 300px"></div>
+
+  	<div style="background-color: #ffffff; height: 50px; width: 300px"></div>
+
+  	<div style =" background-color: #00aa00;height: 50px; width: 300px "></div>
+
+  	<br>
+  	<br>
+  	<h3><a href="page3.html">my new page</a></h3>
+
+
 </body>
