--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="SMbook" class="no_js">
+<html lang="en" id="SMBOOK" class="no_js">
 <head>
 	<title>SMBOOK | WELCOME TO SMBOOK</title>
 </head>
@@ -35,7 +35,7 @@
 	<div style="background-color: RED; height: 70px; width: 100px;">
 		<p style='color: #ffffff' >First paragraph Tag</p>
 	</div>
-	
+
 	<br>
 
   	<div style ="background-color: #e5b264;height: 50px; width: 300px"></div>
@@ -46,7 +46,7 @@
 
   	<br>
   	<br>
-  	<h3><a href="page3.html">my new page</a></h3>
+  	<h3><a href="C:/Users/KMT%20BROS/Desktop/website/page3.html">my new page</a></h3>
 
 
 </body>
