--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   	<br>
   	<br>
-  	<h3><a href="C:/Users/KMT%20BROS/Desktop/website/page3.html">my family details</a></h3>
+  	<h3><a href="page3.html">my family details</a></h3>
 
 
 </body>
