--- a/page3.html
+++ b/page3.html
@@ -20,11 +20,15 @@
 			<ol>
 				<li>
 					syed mubarak
-					<ul> 
+					<ol> 
 						<li>syed khurram</li>
-						<li>syed muzammil</li>
-						<li>syed murtuza</li>
+						<li>syed mohammed muzammil</li>
+					</ol>
+					</ol>
+					<ul>
+						<li>syed murtuza taher</li>
 					</ul>
+
 				</li>
 				<li>
 					syed alam abid
