--- a/page3.html
+++ b/page3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="SMbook" class="no_js">
+<html lang="en" id="SMBOOK" class="no_js">
 <head>
 	<title>hierarchy </title>
 </head>
